# Just4Fun

./: .gitignore  README.md  build.gradle  config.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  PFSolver.hpp  TrackingFunctionPF.hpp  feature.cpp  native-lib.cpp  onlineBoosting.cpp  onlineMIL.cpp  precomp.hpp  test.cpp  tldDataset.cpp  tldDetector.cpp  tldDetector.hpp  tldModel.cpp  tldModel.hpp  tldTracker.cpp  tldTracker.hpp  tldUtils.cpp  tldUtils.hpp  tracker.cpp  tracker.hpp  trackerFeature.cpp  trackerFeatureSet.cpp  trackerMedianFlow.cpp  trackerModel.cpp  trackerSampler.cpp  trackerSamplerAlgorithm.cpp  trackerStateEstimator.cpp  tracking.hpp  tracking_utils.cpp  tracking_utils.hpp
app/src/main/res/drawable/: default_line.xml  search_bg.xml  splash_screen.xml  svg_play_volume.xml
app/src/main/res/layout/: activity_fullscreen.xml  activity_main.xml  activity_main2.xml  banner_item.xml  empty_layout.xml  fragment_home.xml  fragment_shoot.xml  fragment_tbar.xml  home_live_fragment.xml  home_recommend_fragment.xml  hx_videoplayer_layout.xml  nav_header_main.xml  play_fragment.xml  recommend_banner.xml  recommend_item.xml  tablelayout_xxx.xml
app/src/main/res/menu/: activity_main2_drawer.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
videoplayer/: CMakeLists.txt  build.gradle
videoplayer/src/main/: AndroidManifest.xml
videoplayer/src/main/cpp/: test.cpp
(+69 files in other folders)
